svc_apps_test.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc-apps-test
  name: apps-svc
  namespace: development
spec:
  type: NodePort
  selector:
    app: sbom-test
  ports:
  - nodePort: 30500
    port: 80
    protocol: TCP
    targetPort: 80
